# srouter

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  claude_proxy.py  dashboard.py  dashboard_common.py  dashboard_connectivity.py  dashboard_geo.py  dashboard_hotroutes.py  dashboard_isolate.py  dashboard_network.py  dashboard_nodes.py  dashboard_traffic.py  diag-proxy.sh  gen_xray_config.py  git_proxy.py  habr-claude-code-china.md  health.py  hot_routes.py  install.sh  install_lib.py  isolate_firewall.py  local_state.py  lock_hierarchy.py  marker_block.py  node_registry.py  node_selector.py  nodes.example.json  privileged_ops.py  privoxy_audit.py  privoxy_system.py  pyproject.toml  srouter-diag.sh  srouter.local.example.json  srouter.py  srouter_config.example.py  sys_probe.py  traffic_shape.py  (+1 more)
docker/: README.md  acceptance.Dockerfile  run-acceptance.sh
launchagents/: com.srouter.codenv.plist  com.srouter.dashboard.plist  com.srouter.isolate-escape.plist  com.srouter.isolate-refresh.plist  com.srouter.isolate.plist  com.srouter.watchdog.plist  srouter-codex-app-proxy-wrapper.sh  srouter-codex-cli-wrapper.sh  srouter-codex-env.sh  srouter-ppp-ip-up.sh
server/: .dockerignore  .env.example  Dockerfile  README.md  bare-install.sh  config.template.json  deploy.sh  docker-compose.yml  entrypoint.sh  gen-keys.sh  srouter-reality.service  test_bare_install.py
static/: index.html
templates/: dnsmasq.conf  privoxy.config  xray-config.template.json
tests/: _frontend_extract.py  conftest.py  test_applescript_text.py  test_claude_proxy.py  test_claude_transport.py  (+50 more)
(+17 files in other folders)
